--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       <div class="slide-in four col">
         <div class="box">
           <span class="original">
-						<h1>Honey Smacks</h1>
+						<h2>Honey Smacks</h1>
 						<p>Gimme a smack!</p>
 					</span>
           <div class="overlay">
             <a href="https://www.kelloggs.com/en_US/products/kellogg-s-honey-smacks-cereal-product.html">
-              <img height="200px" class="fa fa-commenting-o fa-3x" src="images/honey-smacks.jpeg" alt="" aria-hidden="true">
+              <img class="fa fa-commenting-o fa-3x" src="images/honey-smacks.jpeg" alt="Honey-Smacks" aria-hidden="true">
             </a>
           </div>
         </div>
@@ -32,12 +32,12 @@
       <div class="slide-up four col">
         <div class="box">
           <span class="original">
-						<h1>Frosted Flakes</h1>
+						<h2>Frosted Flakes</h2>
 						<p>Are more than good... They're great!</p>
 					</span>
           <div class="overlay">
             <a href="https://www.kelloggs.com/en_US/products/kellogg-s-frosted-flakes-cereal-product.html">
-            <img height="200px" src="images/frosted-flakes.jpeg" class="fa fa-cogs fa-3x" aria-hidden="true">
+            <img class="fa fa-cogs fa-3x" src="images/frosted-flakes.jpeg" aria-hidden="true">
           </a>
           </div>
         </div>
@@ -45,12 +45,12 @@
       <div class="slide-down-delay four col">
         <div class="box">
           <span class="original">
-						<h1>Froot Loops</h1>
+						<h2>Froot Loops</h2>
 						<p>The flavor of fruit! Wherever it grows!</p>
 					</span>
           <div class="overlay">
             <a href="https://www.kelloggs.com/en_US/products/kellogg-s-froot-loops-cereal-product.html">
-            <img height="200px" src="images/fruit-loops.jpeg" class="fa fa-users fa-3x" aria-hidden="true">
+            <img class="fa fa-users fa-3x" src="images/fruit-loops.jpeg" aria-hidden="true">
           </a>
           </div>
         </div>
@@ -60,12 +60,12 @@
       <div class="rotate four col">
         <div class="box">
           <span class="original">
-						<h1>Strawberry Pop-Tart</h1>
+						<h2>Strawberry Pop-Tart</h2>
 						<p>YOBO – You Only Breakfast Once</p>
 					</span>
           <div class="overlay">
             <a href="https://www.kelloggs.com/en_US/products/pop-tarts-frosted-strawberry-product.html">
-            <img height="200px" src="images/pop-strawberry.jpeg" class="fa fa-star fa-3x" aria-hidden="true">
+            <img class="fa fa-star fa-3x" src="images/pop-strawberry.jpeg" aria-hidden="true">
           </a>
           </div>
         </div>
@@ -73,12 +73,12 @@
       <div class="scale four col">
         <div class="box">
           <span class="original">
-						<h1>Peanut Butter <br>Pop-Tart</h1>
+						<h2>Peanut Butter <br>Pop-Tart</h2>
 						<p>Crazy Good!</p>
 					</span>
           <div class="overlay">
             <a href="https://www.kelloggs.com/en_US/products/pop-tarts-peanut-butter-product.html">
-            <img height="200px" src="images/pop-peanut.jpeg" class="fa fa-trophy fa-3x" aria-hidden="true">
+            <img class="fa fa-trophy fa-3x" src="images/pop-peanut.jpeg" aria-hidden="true">
           </a>
           </div>
         </div>
@@ -86,12 +86,12 @@
       <div class="flip four col">
         <div class="box">
           <span class="original">
-						<h1>Jolly Rancher <br>Pop-Tart</h1>
+						<h2>Jolly Rancher <br>Pop-Tart</h2>
 						<p>Be Smart – Tart</p>
 					</span>
           <div class="overlay">
             <a href="https://www.kelloggs.com/en_US/products/pop-tarts-jolly-rancher-watermelon-toaster-pastries.html">
-            <img height="200px" src="images/pop-green.jpeg" class="fa fa-thumbs-up fa-3x" aria-hidden="true">
+            <img class="fa fa-thumbs-up fa-3x" src="images/pop-green.jpeg" aria-hidden="true">
           </a>
           </div>
         </div>
@@ -101,12 +101,12 @@
       <div class="skew four col">
         <div class="box">
           <span class="original">
-						<h1>Eggo Homestyle</h1>
+						<h2>Eggo Homestyle</h2>
 						<p>Leggo My Eggo!</p>
 					</span>
           <div class="overlay">
             <a href="https://www.kelloggs.com/en_US/products/kellogg-s-eggo-homestyle-waffles-product.html">
-            <img height="200px" src="images/eggo-homestyle.jpeg" class="fa fa-rocket fa-3x" aria-hidden="true">
+            <img class="fa fa-rocket fa-3x" src="images/eggo-homestyle.jpeg" aria-hidden="true">
           </a>
           </div>
         </div>
@@ -114,12 +114,12 @@
       <div class="corner-bottom four col">
         <div class="box">
           <span class="original">
-						<h1>Eggo Pancakes</h1>
+						<h2>Eggo Pancakes</h2>
 						<p>From Frozen to Golden</p>
 					</span>
           <div class="overlay">
             <a href="https://www.kelloggs.com/en_US/products/kellogg-s-eggo-buttermilk-pancakes-product.html">
-            <img height="200px" src="images/eggo-pancake.jpeg" class="fa fa-coffee fa-3x" aria-hidden="true">
+            <img class="fa fa-coffee fa-3x" src="images/eggo-pancake.jpeg" aria-hidden="true">
           </a>
           </div>
         </div>
@@ -127,12 +127,12 @@
       <div class="corner-top four col">
         <div class="box">
           <span class="original">
-						<h1>Eggo Nutri-Grain</h1>
+						<h2>Eggo Nutri-Grain</h2>
 						<p>Toasted to Perfection!</p>
 					</span>
           <div class="overlay">
             <a href="https://www.kelloggs.com/en_US/products/kellogg-s-eggo-nutri-grain-whole-wheat-waffles-product.html">
-            <img height="200px" src="images/eggo-grain.jpeg" class="fa fa-calendar fa-3x" aria-hidden="true">
+            <img class="fa fa-calendar fa-3x" src="images/eggo-grain.jpeg" aria-hidden="true">
           </a>
           </div>
         </div>
